# 2DGameEngine

./: CMakeLists.txt  build.py  build_emscripten.sh  copyheaders_android.sh  copyheaders_ios.sh  copyheaders_mac.sh  sqpatch.diff
include/ios/: HLGL.h  (+65 more)
libs/: CMakeLists.txt
libs/JavaScriptCore/android/: Android.mk
libs/OpenThreads/include/OpenThreads/: Config
libs/curl/android/: Android.mk
libs/icu/android/: Android.mk
libs/jpeg-turbo/android/: Android.mk
libs/jpeg/android/: Android.mk
libs/kazmath/src/: mat4.c  neon_matrix_impl.c
libs/openssl/android/: Android.mk
libs/png/android/: Android.mk
libs/protobuf/: Android.mk  Makefile  config.status  libtool
libs/protobuf/gtest/: Makefile  config.status  libtool
libs/protobuf/src/: Makefile
libs/protobuf/vsprojects/: UpgradeLog.htm  libprotobuf-lite.vcxproj  libprotobuf.vcxproj  libprotoc.vcxproj  protoc.vcxproj  test_plugin.vcxproj.filters
libs/protobuf/vsprojects/Release/: libprotobuf-lite.lib
libs/protobuf/xcodeproject/protobuf/: protobuf-Prefix.pch
libs/protobuf/xcodeproject/protobuf.xcodeproj/: project.pbxproj
libs/spidermonkey/win32/include/: jsapi.h
libs/spine-c/: CMakeLists.txt
libs/spine-c/include/spine/: Binary.h  SkeletonBinary.h  spine.h
libs/spine-c/src/spine/: AnimationState.c  Binary.cpp  Bone.c  Event.c  Skeleton.c  SkeletonBinary.cpp  Slot.c
libs/webp/android/: Android.mk
src/: Android.mk  CMakeLists.txt
src/android/: HLApkTools.cpp  HLApkTools.h  HLApplication_android.cpp  HLAsyncGLTask.cpp  HLResourceManager_android.cpp  HLUserDefaults.cpp
src/android/jni/: IMEJni.cpp  Java_com_hoolai_engine_HLHelper.cpp  Java_com_hoolai_engine_HLHelper.h  Java_com_hoolai_engine_HLNotification.cpp  Java_com_hoolai_engine_HLRenderer.cpp  JniHelper.cpp  TouchesJni.cpp
src/application/: HLApplication.cpp  HLApplication.h  HLDirector2D.cpp  HLDirector3D.cpp  HLDirector3D.h
src/base/: HLAutoreleasePool.cpp  HLAutoreleasePool.h  HLNotificationCenter.cpp  HLObject.cpp
src/common/: HLAsyncGLTask.cpp  HLAsyncGLTask.h  HLClassRegister.cpp  HLClassRegister.h  HLDelegateImpl.h  HLGL.h  HLGeometry.cpp  HLGeometry.h  HLMacros.h  HLProfileUtil.cpp  HLSingleton.h  HLStringUtil.cpp  HLStringUtil.h  HLUtil.cpp  HLUtil.h  md5.cpp
src/common/HLFont/: HLFont.cpp  HLFont.h
src/common/bmfont/: HLBMFont.cpp
src/core/: HLAnimateSystem.cpp  HLEntitySystem.cpp  HLResourceManager.cpp  HLSceneManager.cpp  HLSceneManager.h  HLSpriteFrame.cpp  HLSpriteFrame.h  HLTimer.cpp
src/core/components/: HLBMFontComponent.cpp  HLBMFontComponent.h  HLBatchComponent.cpp  HLBlendFuncComponent.cpp  HLBlendFuncComponent.h  HLCamera2DComponent.cpp  HLClippingComponent.cpp  HLClippingComponent.h  HLColorAdvanceComponent.cpp  HLColorComponent.cpp  HLColorComponent.h  HLGUIViewComponent.cpp  HLGUIViewComponent.h  HLParticleComponent.cpp  HLParticleComponent.h  HLParticleExampleComponent.cpp  HLPolygonHitTestComponent.cpp  HLPrimitiveComponent.cpp  HLPrimitiveComponent.h  HLScissorComponent.cpp  HLScissorComponent.h  HLShaderComponent.cpp  HLShaderComponent.h  HLSpriteComponent.cpp  HLSpriteComponent.h  HLTransform2DComponent.cpp  HLTransform2DComponent.h
src/core/components/3D/: HLCameraComponent.cpp  HLCameraComponent.h  HLNodeGraph3DComponent.cpp  (+5 more)
src/core/eventdispatcher/: HLEventType.h  HLMouseDispatcher.cpp  HLMouseDispatcher.h  HLTouchDispatcher.cpp
src/core/utils/: HLFileUtil.cpp
src/glhelpers/: HLDefaultShaders.h  HLDrawingPrimitives.cpp  HLGLConfiguration.cpp  HLGLMatrixStack.cpp  HLGLRenderCommand.cpp  HLGLRenderCommand.h  HLGLStateCache.cpp  HLGLStateCache.h  HLGaussianBlurProgram.cpp  HLGaussianBlurProgram.h  HLProgram.cpp
src/gui/: HLAlertView.cpp  HLAlertView.h  HLButton.cpp  HLEditBox.cpp  HLGUIManager.cpp  HLImageView.cpp  HLImageView.h  HLLabel.cpp  HLPrimitiveView.cpp  HLPrimitiveView.h  HLProgressIndicator.cpp  HLProgressRadialView.cpp  HLSceneView.cpp  HLScrollView.cpp  HLSmartLabel.cpp  HLSmartLabel.h  HLTableView.cpp  HLTableView.h  HLTableViewCell.cpp  HLToast.cpp  HLToolTip.cpp  HLView.cpp  HLViewDND.cpp  HLViewLoader.cpp  HLWidget.cpp  HLWidget.h  guifile.pb.cpp
src/gui/RichLabel/: HLRichLabel.cpp  HLStyledNode.cpp  HLStyledNode.h  HLStyledTextParser.cpp  HLStyledTextParser.h  HLXHTMLParser.cpp  HLXHTMLParser.h
src/ios/: EAGLRenderer.h  EAGLRenderer.m  EAGLView.h  EAGLView.mm  HLApplication_ios.mm  HLAsyncGLTask.mm  HLResourceManager_ios.mm  HLTextInputView_ios.h  HLTextInputView_ios.mm  HLUserDefaults.mm  RootViewController.h  RootViewController.mm
src/jsscripting/: JSComponent.cpp  JSScriptingCore.cpp
src/jsscripting/js/: ViewController.js  jsb_hoolai.js
src/jsscripting/jswrappers/: JSAnimationSystem.cpp  JSApplication.cpp  JSCPPWrapper.cpp  JSConversions.cpp  JSDirector2D.cpp  JSDirector2D.h  JSEntitySystem.cpp  JSEntitySystem.h  JSNotificationCenter.cpp  JSResourceManager.cpp  JSResourceManager.h  JSSceneManager.cpp  JSSceneManager.h  JSSpriteFrame.cpp  JSSpriteFrame.h  JSTexture.cpp  JSTexture.h  JSTimer.cpp  JSTouchDispatcher.cpp  JSTouchDispatcher.h  JSUserDefaults.cpp  JSUserDefaults.h
src/jsscripting/scripts/: main.js
src/jsscripting/scripts_debugger/: js_debugger.js
src/mac/: HLApplication_mac.mm  HLAsyncGLTask.mm  HLGLView.mm  HLResourceManager_mac.mm  HLTextInputView_mac.h  HLTextInputView_mac.mm  OpenGL_Internal.h  semaphore_darwin.h
src/network/: HLHttpDownloadManager.cpp  HLHttpDownloadManager.mm  HLHttpNetwork.cpp  HLHttpNetwork.h  HLHttpNetwork.mm  HLHttpRequest.cpp  HLReachability.cpp  HLReachability.mm
src/test/: HttpTest.cpp  HttpTest.h
src/textures/: HLImageCodec.h  HLImageETC1Codec.cpp  HLImageJPEGCodec.cpp  HLImageJPEGCodec.h  HLImagePNGCodec.cpp  HLImagePNGCodec.h  HLImagePVRCodec.cpp  HLImagePVRCodec.h  HLImageWEBPCodec.cpp  HLRenderTexture.cpp  HLTexture.cpp  HLTexture.h
src/win32/: HLApplication_win.cpp  HLGLView.cpp  HLGLView.h  HLInputSystem.cpp  HLResourceManager_win.cpp  HLUserDefaults.cpp  OpenGL_Internal.h  hltime.cpp  hltime.h
src/wxwidgets/: HLApplication.cpp  HLImage.cpp  HLInputSystem.cpp  HLInputSystem.h  HLResourceManager_wx.cpp
(+261 files in other folders)
